# workerbee

./: .env.example  .gitignore  AGENTS.md  README.md  RELEASE_NOTES.md  docker-compose.yml
.github/workflows/: desktop-packages.yml
.opencode/agents/: blank-template.md  data-extractor-csv.md  document-processor.md  document-summarization.md  html5-dashboard-generator.md  qa-triage.md  research-analyst.md  simple-agent.md
backend/: Dockerfile  desktop_entry.py  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  database.py  file_preview.py  main.py  meeting_followup_renderer.py  models.py  opencode_client.py  presentation_renderer.py  project_status_renderer.py  proposal_renderer.py  recurring_report_renderer.py  research_synthesis_renderer.py  runtime_contract.py  schemas.py  source_archive.py  work_packs.py
backend/app/agent/: __init__.py  sandbox.py
backend/app/agent/templates/blank-template/: system.md
backend/app/agent/templates/data-extractor-csv/: system.md
backend/app/agent/templates/document-processor/: rules.md  system.md
backend/app/agent/templates/document-summarization/: system.md
backend/app/agent/templates/html5-dashboard-generator/: system.md
backend/app/agent/templates/qa-triage/: handoff.md  system.md
backend/app/agent/templates/research-analyst/: output_contract.md  system.md
backend/app/agent/templates/simple-agent/: system.md
backend/app/routers/: agents.py  auth.py  executions.py  files.py  outputs.py  task_threads.py  tasks.py  users.py  workflows.py
backend/tests/: test_external_action_events.py  test_file_preview.py  test_meeting_followup_renderer.py  test_presentation_renderer.py  test_project_status_renderer.py  test_proposal_renderer.py  test_recurring_report_renderer.py  test_research_synthesis_renderer.py  test_resource_groups.py  test_runtime_contract.py  test_source_archive.py  test_source_sets.py  test_task_threads.py  test_work_packs.py
backend/tests/fixtures/: status-update-message.md
desktop/: README.md  package-lock.json  package.json
desktop/scripts/: build-runtime.mjs  runtime-compatibility.cjs  runtime-contract.cjs  verify-runtime.cjs
desktop/src/: calendar-draft.cjs  email-draft.cjs  file-export.cjs  main.cjs  model-settings.cjs  preload.cjs  task-notification.cjs
desktop/test/: calendar-draft.test.cjs  email-draft.test.cjs  file-export.test.cjs  model-settings.test.cjs  packaging-config.test.cjs  runtime-compatibility.test.cjs  runtime-contract.test.cjs  task-notification.test.cjs
frontend/: Dockerfile.dev  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
opencode/: Dockerfile  opencode.json
plans/: desktop-release-checklist.md  product-platform-roadmap.md  workerbee-architecture.md  workerbee-ui-design-spec.md
sandbox/: Dockerfile
sandbox/app/: __init__.py  (+1 more)
(+62 files in other folders)
